--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -10,8 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
@@ -24,8 +23,6 @@
             app:logo="@drawable/logo_placeholder"
             app:subtitle="loading"
             app:title="@string/app_name" />
-
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -47,10 +44,7 @@
         android:layout_width="200dp"
         android:layout_height="96dp"
         android:layout_gravity="bottom|right"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginBottom="60dp" />
 
     <ru.skillbranch.skillarticles.ui.custom.Bottombar
         android:id="@+id/bottombar"
@@ -58,9 +52,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:elevation="4dp"
-        android:theme="@style/ArticleBarsTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:theme="@style/ArticleBarsTheme" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
