--- a/app/src/main/res/layout/layout_bottombar.xml
+++ b/app/src/main/res/layout/layout_bottombar.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.skillbranch.skillarticles.ui.custom.Bottombar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
-
+    android:id="@+id/bottombar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:layout_gravity="bottom"
+    android:elevation="4dp"
+    android:theme="@style/ArticleBarsTheme"
+    app:layout_insetEdge="bottom">
 
     <ru.skillbranch.skillarticles.ui.custom.CheckableImageView
         android:id="@+id/btn_like"
@@ -46,13 +51,14 @@
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_bottom"
+        app:constraint_referenced_ids="btn_bookmark,btn_settings,btn_like,btn_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="btn_bookmark,btn_settings,btn_like,btn_share"
         tools:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/reveal"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_marginBottom="0dp"
@@ -62,7 +68,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible">
 
         <ImageView
@@ -73,12 +78,12 @@
 
         <TextView
             android:id="@+id/tv_search_result"
+            android:textColor="?attr/colorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
             android:text="Not found"
-            android:textColor="?attr/colorPrimary"
             tools:textColor="@android:color/white" />
 
         <View
@@ -99,4 +104,4 @@
             tools:tint="@android:color/white" />
 
     </LinearLayout>
-</merge>
+</ru.skillbranch.skillarticles.ui.custom.Bottombar>
